--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AttireModique | ommerce Website Design</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./style/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -26,7 +26,7 @@
             <li><a href="">Product View</a></li>
             <li><a href="about.html">About Us</a></li>
             <li><a href="">Contact Us</a></li>
-            <li><a href="account.html">Account></a></li>
+            <li><a href="account.html">Account</a></li>
           </ul>
         </nav>
         <a href="cart.html"><img src="images/logo1.jpg" style="mix-blend-mode: multiply;" width="30px" height="30px"></a>
